<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TotalFragment">

        <TextView
            android:id="@+id/totalTitol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/total_titol"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalTitol">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:stretchColumns="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/plat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/preu_unitari"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/quantitat_tablerow"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_tablerow"
                        android:textAlignment="textEnd" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/nomPrimerPlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/nom_primer_plat" />


                    <TextView
                        android:id="@+id/preuPrimerPlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/preu_unitari_primer_plat"
                        android:textAlignment="textEnd" />


                    <TextView
                        android:id="@+id/quantitatPrimerPlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/quantitat_primer_plat"
                        android:textAlignment="textEnd" />


                    <TextView
                        android:id="@+id/totalPrimerPlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/total_primer_plat"
                        android:textAlignment="textEnd" />


                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/nomBeguda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/nom_beguda" />


                    <TextView
                        android:id="@+id/preuBeguda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/preu_unitari_beguda"
                        android:textAlignment="textEnd" />


                    <TextView
                        android:id="@+id/quantitatBeguda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/quantitat_beguda"
                        android:textAlignment="textEnd" />


                    <TextView
                        android:id="@+id/totalBeguda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/total_beguda"
                        android:textAlignment="textEnd" />


                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="2"
                        android:textAlignment="textEnd"/>

                    <TextView
                        android:id="@+id/totalFinal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd" />
                </TableRow>


            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>