<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrimerFragment">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="#9C9A9A"
            android:text="@string/next"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editQuantitat"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="340dp"
            android:layout_height="81dp"
            android:layout_marginTop="57dp"
            android:background="@drawable/outline_box_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editQuantitat"
            android:layout_width="198dp"
            android:layout_height="69dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/quantitat"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.261"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/preuUnitari"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textSize="25sp"
            android:background="@drawable/textview_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toEndOf="@+id/editQuantitat"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/_1r_plat"
            android:textSize="100sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
